<resources>
    <string name="app_name">MatchVagas</string>
    <string name="login_title">Entrar</string>
    <string name="login_subtitle">Acesse sua conta para continuar</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="no_account">Não tem uma conta?</string>
    <string name="register">Cadastre-se</string>
    <string name="app_tagline">Conectando talentos a oportunidades</string>
    <string name="logo_desc">Logo MatchVagas</string>
    <string name="divider_or">ou</string>
    <string name="dashboard_candidato">Dashboard do Candidato</string>
    <string name="navibar_home">Home</string>
    <string name="navibar_search">Buscar</string>
    <string name="navibar_vagas">Vagas</string>
    <string name="navibar_perfil">Perfil</string>
    <string name="home_greeting">Olá, João!</string>
    <string name="home_subtitle">Veja as oportunidades de hoje</string>
    <string name="stat_candidaturas">Candidaturas</string>
    <string name="stat_visualizacoes">Visualizações</string>
    <string name="stat_matches">Matches</string>
    <string name="vagas_recomendadas">Vagas Recomendadas</string>
    <string name="ver_todas">Ver todas</string>
    <string name="candidatar">Candidatar-se</string>
    <string name="salvar">Salvar</string>
    <string name="buscar_hint">Buscar vagas, empresas…</string>
    <string name="resultados">resultados encontrados</string>
    <string name="chip_todos">Todos</string>
    <string name="chip_tecnologia">Tecnologia</string>
    <string name="chip_remoto">Remoto</string>
    <string name="chip_clt">CLT</string>
    <string name="chip_estagio">Estágio</string>
    <string name="tab_candidaturas">Candidaturas (5)</string>
    <string name="tab_salvas">Salvas (8)</string>
    <string name="status_em_analise">Em Análise</string>
    <string name="status_entrevista">Entrevista</string>
    <string name="status_aprovado">Aprovado</string>
    <string name="status_reprovado">Reprovado</string>
    <string name="candidatou_em">Candidatou-se</string>
    <string name="salvo_em">Salvo</string>
    <string name="ver_detalhes">Ver detalhes</string>
    <string name="perfil_nome">João Silva</string>
    <string name="perfil_cargo">Desenvolvedor Android</string>
    <string name="completar_perfil">Complete seu perfil</string>
    <string name="perfil_progresso">Seu perfil está 65%% completo</string>
    <string name="perfil_dica">Adicione sua experiência e habilidades para aumentar suas chances</string>
    <string name="completar_agora">Completar agora</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="dados_pessoais_sub">Nome, telefone, endereço</string>
    <string name="formacao">Formação Acadêmica</string>
    <string name="formacao_sub">Curso de Análise e Desenvolvimento de Sistemas</string>
    <string name="experiencia">Experiência Profissional</string>
    <string name="experiencia_sub">2 experiências adicionadas</string>
    <string name="habilidades">Habilidades</string>
    <string name="habilidades_sub">Adicione suas habilidades técnicas</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="sair">Sair da conta</string>
    <string name="secao_completa">Completo</string>
    <string name="secao_incompleta">Incompleto</string>
    <string name="secao_em_progresso">Em progresso</string>
    <string name="avatar_desc">Foto de perfil</string>
    <string name="perfil_profissional">Perfil Profissional</string>
    <string name="perfil_profissional_sub">Objetivo, disponibilidade e pretensão</string>
    <string name="hint_objetivo_profissional">Objetivo profissional</string>
    <string name="hint_disponibilidade">Disponibilidade</string>
    <string name="hint_pretensao_salarial">Pretensão salarial (R$)</string>
    <string name="disponibilidade_imediata">Imediata</string>
    <string name="disponibilidade_2_semanas">2 semanas</string>
    <string name="disponibilidade_1_mes">1 mês</string>
    <string name="disponibilidade_a_combinar">A combinar</string>
    <string name="sucesso_perfil_profissional_salvo">Perfil profissional salvo!</string>
    <string name="erro_objetivo_vazio">Informe seu objetivo profissional</string>
    <string name="objetivo_hint">Ex: Desenvolvedor Android pleno buscando oportunidades…</string>
    <string name="job_image_desc">Imagem da vaga</string>
    <string name="favorite">Favoritar vaga</string>
    <string name="share">Compartilhar vaga</string>
    <string name="detalhes_vaga_title">Detalhes da Vaga</string>
    <string name="descricao">Descrição</string>
    <string name="requisitos">Requisitos</string>
    <string name="beneficios">Benefícios</string>
    <string name="candidatura_enviada">Candidatura enviada com sucesso!</string>
    <string name="vaga_salva">Vaga salva!</string>
    <string name="compartilhando">Compartilhando vaga…</string>
    <string name="confirmar_candidatura_title">Confirmar Candidatura</string>
    <string name="candidatando_para">Candidatando-se para</string>
    <string name="dados_obrigatorios">Dados obrigatórios</string>
    <string name="sempre_compartilhado">Sempre compartilhado</string>
    <string name="info_nome">Nome completo</string>
    <string name="info_email">E-mail</string>
    <string name="informacoes_opcionais">Informações adicionais</string>
    <string name="info_telefone">Telefone</string>
    <string name="info_telefone_sub">Número de contato direto</string>
    <string name="info_curriculo">Currículo</string>
    <string name="info_curriculo_sub">Histórico profissional completo</string>
    <string name="info_formacao">Formação Acadêmica</string>
    <string name="info_formacao_sub">Cursos e instituições de ensino</string>
    <string name="info_experiencia">Experiência Profissional</string>
    <string name="info_experiencia_sub">Empresas e cargos anteriores</string>
    <string name="info_habilidades">Habilidades</string>
    <string name="info_habilidades_sub">Competências técnicas e comportamentais</string>
    <string name="info_linkedin">LinkedIn</string>
    <string name="info_linkedin_sub">Perfil público na rede profissional</string>
    <string name="carta_apresentacao">Carta de Apresentação</string>
    <string name="carta_hint">Escreva uma mensagem para o recrutador…</string>
    <string name="pretensao_salarial">Pretensão Salarial</string>
    <string name="pretensao_hint">0,00</string>
    <string name="opcional">Opcional</string>
    <string name="termos_candidatura">Concordo em compartilhar as informações selecionadas com o recrutador responsável por esta vaga</string>
    <string name="btn_confirmar_candidatura">Confirmar Candidatura</string>
    <string name="erro_termos">Você precisa aceitar os termos para continuar</string>
    <string name="dialog_sucesso_title">Candidatura enviada!</string>
    <string name="dialog_sucesso_msg">Sua candidatura foi registrada com sucesso. O recrutador receberá as informações selecionadas e entrará em contato em breve. Acompanhe o status na aba Vagas.</string>
    <string name="dialog_ok">Entendido</string>
    <string name="voltar">Voltar</string>
    <string name="hint_nome_completo">Nome completo</string>
    <string name="hint_telefone">Telefone / Celular</string>
    <string name="hint_data_nascimento">Data de nascimento</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_genero">Gênero</string>
    <string name="hint_logradouro">Logradouro (rua, av…)</string>
    <string name="hint_numero_end">Número</string>
    <string name="hint_complemento">Complemento (opcional)</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_linkedin">LinkedIn (ex: linkedin.com/in/seu-nome)</string>
    <string name="hint_portfolio">Portfólio / Site pessoal</string>
    <string name="secao_informacoes_basicas">Informações Básicas</string>
    <string name="secao_identificacao">Identificação</string>
    <string name="secao_localizacao">Localização</string>
    <string name="secao_redes_profissionais">Redes Profissionais</string>
    <string name="btn_salvar_alteracoes">Salvar Alterações</string>
    <string name="genero_masculino">Masculino</string>
    <string name="genero_feminino">Feminino</string>
    <string name="genero_nao_binario">Não-binário</string>
    <string name="genero_prefiro_nao_informar">Prefiro não informar</string>
    <string name="erro_nome_vazio">Informe seu nome completo</string>
    <string name="erro_email_invalido">Informe um e-mail válido</string>
    <string name="sucesso_dados_salvos">Dados salvos com sucesso!</string>
    <string name="secao_instituicao">Dados da Instituição</string>
    <string name="secao_periodo">Período</string>
    <string name="secao_descricao">Descrição</string>
    <string name="hint_instituicao">Instituição de ensino</string>
    <string name="hint_curso">Curso</string>
    <string name="hint_grau">Grau / Nível</string>
    <string name="hint_mes">Mês</string>
    <string name="hint_ano">Ano (ex: 2022)</string>
    <string name="hint_descricao_formacao">Atividades, projetos ou observações (opcional)</string>
    <string name="descricao_formacao_dica">Descreva trabalhos de conclusão, projetos acadêmicos ou atividades extracurriculares relevantes.</string>
    <string name="ainda_cursando">Ainda cursando</string>
    <string name="ainda_cursando_sub">Curso sem data de conclusão definida</string>
    <string name="periodo_inicio">Início</string>
    <string name="periodo_conclusao">Conclusão</string>
    <string name="grau_ensino_medio">Ensino Médio</string>
    <string name="grau_tecnico">Técnico</string>
    <string name="grau_graduacao">Graduação</string>
    <string name="grau_posgraduacao">Pós-graduação</string>
    <string name="grau_mba">MBA</string>
    <string name="grau_mestrado">Mestrado</string>
    <string name="grau_doutorado">Doutorado</string>
    <string name="mes_jan">Janeiro</string>
    <string name="mes_fev">Fevereiro</string>
    <string name="mes_mar">Março</string>
    <string name="mes_abr">Abril</string>
    <string name="mes_mai">Maio</string>
    <string name="mes_jun">Junho</string>
    <string name="mes_jul">Julho</string>
    <string name="mes_ago">Agosto</string>
    <string name="mes_set">Setembro</string>
    <string name="mes_out">Outubro</string>
    <string name="mes_nov">Novembro</string>
    <string name="mes_dez">Dezembro</string>
    <string name="erro_instituicao_vazia">Informe a instituição de ensino</string>
    <string name="erro_curso_vazio">Informe o nome do curso</string>
    <string name="erro_ano_invalido">Informe um ano válido (ex: 2022)</string>
    <string name="sucesso_formacao_salva">Formação salva com sucesso!</string>
    <string name="secao_dados_cargo">Dados do Cargo</string>
    <string name="secao_responsabilidades">Responsabilidades</string>
    <string name="hint_cargo">Cargo / Função</string>
    <string name="hint_empresa">Empresa</string>
    <string name="hint_modalidade">Modalidade de trabalho</string>
    <string name="hint_vinculo">Tipo de vínculo</string>
    <string name="hint_cidade_empresa">Cidade (ex: São Paulo, SP)</string>
    <string name="hint_responsabilidades">Descreva suas principais responsabilidades e conquistas (opcional)</string>
    <string name="responsabilidades_dica">Use verbos de ação: desenvolveu, liderou, implementou, reduziu…</string>
    <string name="trabalho_atual">Trabalho atual</string>
    <string name="trabalho_atual_sub">Ainda trabalho nessa empresa</string>
    <string name="periodo_saida">Saída</string>
    <string name="modalidade_presencial">Presencial</string>
    <string name="carregando">Carregando…</string>
</resources>